Mon Jul  4 19:29:00 2000  Corinna Vinschen  <corinna@vinschen.de>

	* poll.cc (poll): Zero out `open_fds' as well.

Mon Jul  4 19:22:00 2000  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/version.h: Bump API minor version to 24.

2000-07-04  Kazuhiro Fujieda  <fujieda@jaist.ac.jp>

	* security.cc (read_sd): Eliminate OemToChar.

Mon Jul  4 18:57:00 2000  Corinna Vinschen  <corinna@vinschen.de>

	* poll.cc: New file. Implement `poll' system call.
	* include/poll.h: Ditto.
	* include/sys/poll.h: Ditto.
	* Makefile.in: Add poll.o as dependency.
        * cygwin.din: Add poll and _poll symbols.

2000-07-04  Kazuhiro Fujieda  <fujieda@jaist.ac.jp>

	* dcrt0.cc (dll_crt0_1): Eliminate SetFileApisToOEM and CharToOem.
	* (dummy_autoload): Add functions used in fhandler_console.
	* fhandler_console.cc (fhandler_console::read): Use ENCHANCED_KEY flag
	to distinguish extended keys.  Translate an input character from the
	OEM code page to the ANSI code page.
	* (fhandler_console::write_normal): Translate output characters from
	the ANSI code page to the OEM code page.
	* syscalls.cc (_link): Use MultiByteToWideChar instead of OemToCharW.

Mon Jul  3 16:09:16 2000  Christopher Faylor <cgf@cygnus.com>

	* exceptions.cc (stack_info::walk): Use method to find offset.
	(handle_exceptions): Be more assertive in finding ebp for use under
	W2K.  Create a dummy stack frame for cases where program is dying and a
	stack dump is being output.
	(sig_handle): Fill out a GetThreadContext for use with a user-generated
	"core dump".

Mon Jul  3 10:53:00 2000  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/socket.h: Remove SOCK_PACKET define since it's
	not supported by Windows sockets.

Sun Jul  2 21:50:48 2000  Christopher Faylor <cgf@cygnus.com>

	* dcrt0.cc (user32_init): Add primitive guard against concurrent
	attempts to call this function.  Also add temporary debugging code to
	display a message if the function is called multiple times.
	(api32_init): Ditto.
