@@ -1,8 +1,13 @@
+2000-07-04  Vadim Egorov  <egorovv@mailandnews.com>
+
+	* exceptions.cc (try_to_debug): Prevent recursive spawning of JIT
+	debugger.  Treat special event from debugger as command to continue.
+
 Mon Jul  4 19:29:00 2000  Corinna Vinschen  <corinna@vinschen.de>
 
 	* poll.cc (poll): Zero out `open_fds' as well.
 
-Mon Jul  4 19:22:00 2000  Corinna Vinschen  <corinna@vinschen.de>
+Mon Jul  4 1:22:00 2000  Corinna Vinschen  <corinna@vinschen.de>
 
 	* include/cygwin/version.h: Bump API minor version to 24.
 
@@ -16,7 +21,7 @@ Mon Jul  4 18:57:00 2000  Corinna Vinschen  <corinna@vinschen.de>
 	* include/poll.h: Ditto.
 	* include/sys/poll.h: Ditto.
 	* Makefile.in: Add poll.o as dependency.
-        * cygwin.din: Add poll and _poll symbols.
+	* cygwin.din: Add poll and _poll symbols.
 
 2000-07-04  Kazuhiro Fujieda  <fujieda@jaist.ac.jp>
 
